app/assets/stylesheets/rooms_store.css.scss
#store_main_box {
  position:fixed;
  z-index:5;
  top:45px;
  right:0px;
  width:780px;
  height:750px;
  background-color: rgba(0,0,0,.8);
  transition:all .4s ease-in-out;
 }


.store_main_box_left {
  float:left;
  width:40px;
  height:750px;
}


.store_main_box_right {
  float:right;
  width:740px;
  height:750px;
  background-color:#ffffff;
}


#store_close_button img {
  position:relative;
  top:1%;
  left:10px;
  width: 14px;
  height:14px;
}


#store_collapse_button img {
  position:relative;
  top:50%;
  left:0px;
  width: 22px;
  height:24px;
}


.tab-content {
  overflow: scroll;
  width:720px;
  height:700px;  
}


.tab-content li {
  display: table-cell;
}


.tab-content ul {
  margin: 0px;
}


.store_image_cell {
  width: auto;
  max-width: 180px;
  height: auto;
  max-height: 180px;
}


.store_container {
  margin: 8px;
  border: 1px solid;
  border-color: #ebebeb;
  text-align: center;
  font-size: 11px;
  width: 180px;
  height: 200px;
}


#button_preview {
  position:relative;
  top: -100px;
  left:0px;
}


.store_menu_save_cancel_remove {
  top: 45px;
  z-index: 3;
}

